chore(lotto): 주어진 LottoTest 활용하여 테스트 할 수 있도록 변경!